# InfiniTAM

./: .gitignore  CMakeLists.txt  Makefile  README.md  calib_vcu.txt  data_loading.hpp  plugin.cpp  plugin_dataset.cpp
ITMLib/Core/: ITMBasicEngine.h  ITMBasicEngine.tpp  ITMBasicSurfelEngine.h  ITMBasicSurfelEngine.tpp  ITMDenseMapper.tpp  ITMMainEngine.h  ITMMultiEngine.h  ITMTrackingController.h
ITMLib/Engines/Reconstruction/CPU/: ITMSceneReconstructionEngine_CPU.tpp
ITMLib/Engines/Reconstruction/CUDA/: ITMSceneReconstructionEngine_CUDA.tcu
ITMLib/Engines/Reconstruction/Shared/: ITMSceneReconstructionEngine_Shared.h
ITMLib/Engines/Visualisation/CUDA/: ITMVisualisationEngine_CUDA.tcu
ITMLib/Objects/Camera/: ITMCalibIO.cpp
ITMLib/Objects/Tracking/: ITMTrackingState.h
ITMLib/Trackers/: ITMTrackerFactory.h
ITMLib/Trackers/CPU/: ITMExtendedTracker_CPU.cpp
ITMLib/Trackers/Interface/: ITMColorTracker.h  ITMCompositeTracker.h  ITMDepthTracker.cpp  ITMDepthTracker.h  ITMExtendedTracker.cpp  ITMExtendedTracker.h  ITMFileBasedTracker.h  ITMForceFailTracker.cpp  ITMForceFailTracker.h  ITMIMUTracker.h  ITMTracker.h
ITMLib/Trackers/Shared/: ITMExtendedTracker_Shared.h
ITMLib/Utils/: ITMLibSettings.cpp
InfiniTAM/: CMakeLists.txt  Makefile
InfiniTAM/Apps/InfiniTAM/: InfiniTAM.cpp  UIEngine.cpp  UIEngine.h
InfiniTAM/Apps/InfiniTAM_cli/: CLIEngine.cpp  CLIEngine.h  InfiniTAM_cli.cpp
InfiniTAM/ILLIXR/: CMakeLists.txt  plugin.cpp
InfiniTAM/ITMLib/: ITMLibDefines.h
InfiniTAM/ITMLib/Core/: ITMBasicEngine.h  ITMBasicEngine.tpp  ITMMainEngine.h
InfiniTAM/ITMLib/Engines/Meshing/CPU/: ITMMeshingEngine_CPU.tpp
InfiniTAM/ITMLib/Engines/Meshing/CUDA/: ITMMeshingEngine_CUDA.tcu
InfiniTAM/ITMLib/Engines/Reconstruction/CPU/: ITMSceneReconstructionEngine_CPU.tpp
InfiniTAM/ITMLib/Engines/Reconstruction/CUDA/: ITMSceneReconstructionEngine_CUDA.tcu
InfiniTAM/ITMLib/Engines/Reconstruction/Shared/: ITMSceneReconstructionEngine_Shared.h
InfiniTAM/ITMLib/Objects/Meshing/: ITMMesh.h
InfiniTAM/ITMLib/Objects/RenderStates/: ITMRenderState_VH.h
InfiniTAM/ITMLib/Objects/Scene/: ITMRepresentationAccess.h
InfiniTAM/ITMLib/Utils/: ITMLibSettings.cpp  ITMLibSettings.h
InfiniTAM/InputSource/: ImageSourceEngine.cpp  ImageSourceEngine.h
InfiniTAM/ORUtils/: CMakeLists.txt  PIDController.h
InfiniTAM/scripts/: ETH3D.sh  EuRoC.sh  ICL_NUIM.sh  InteriorNet.sh  KITTI_odo_00.sh  L515.sh  TUM_fr1.sh  TUM_fr2.sh  TUM_fr3.sh  VCU_RVI.sh  fr1.sh
InfiniTAM/scripts/InfiniTAM/: ETH3D.sh  VCU_RVI.sh
InfiniTAM/scripts/InfiniTAM-BE/: ETH3D.sh
InfiniTAM/scripts/calibration/: VCU_RVI.txt
ORUtils/: SE3Pose.cpp  SE3Pose.h
cmake/: Flags.cmake  UseCUDA.cmake
